# neovim-lib

./: Cargo.toml  Makefile  README.md  appveyor.yml
bindings/: generate_bindings.py  neovim_api.rs  neovim_api_async.rs
src/: async.rs  lib.rs  neovim.rs  neovim_api.rs  neovim_api_async.rs  session.rs
src/rpc/: client.rs  handler.rs  mod.rs  model.rs  receiver.rs  value.rs
tests/: lib.rs
