[package]
name = "neovim-lib"
version = "0.1.0"
authors = ["daa84 <daa84@inbox.ru>"]
license = "LGPL-3.0"
descripton = "msgpack-rpc neovim client"
repository = "https://github.com/daa84/neovim-lib"
keywords = ["neovim"]
exclude = ["generate.bat", "Makefile"]

[dependencies]
rmp = "0.7"
rmp-serialize = "0.7"
rustc-serialize = "0.3"
