[package]
name = "neovim-lib"
version = "0.1.2"
authors = ["daa84 <daa84@inbox.ru>"]
license = "LGPL-3.0"
description = "msgpack-rpc neovim client"
documentation = "http://daa84.github.io/neovim-lib/neovim_lib/index.html"
repository = "https://github.com/daa84/neovim-lib"
keywords = ["neovim"]
exclude = ["generate.bat", "Makefile"]

[dependencies]
rmp = "0.7"
rmp-serialize = "0.7"
rustc-serialize = "0.3"
log = "0.3"
